--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -283,4 +283,175 @@
         max-width: 100%;
     }
 }
+
+@media screen and (max-width:765px) {
+    
+.container.product-details {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    height: fit-content;
+    background: #fff;
+    margin: auto;
+    overflow: hidden;
+    padding: 0;
+    box-shadow: none;
+    padding: 20px;
+    border-radius: 25px;
+
+    .title-specs-div{
+        .h4{
+            border-bottom: 2px solid rgb(0 0 0 / 36%);
+            display: flex;
+            margin: 30px 0;
+            padding-bottom: 5px;
+        }
+        .h4 span{
+            display: flex;
+            font-weight: bold;
+            min-width: 30%;
+        }
+    }
+}
+
+.container.product-details .imgBx {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(to bottom right,#497fc3cc, #d06b70);
+    transition: .3s linear;
+    border-radius: 20px;
+}
+
+
+
+.container.product-details .imgBx img {
+    position: relative;
+    width: 300px;
+    left: 0;
+    transition: .9s linear;
+}
+
+.container.product-details .details {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 30px 20px;
+}
+
+.container.product-details .details .content{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.container.product-details .details h2{
+    margin: 0;
+    padding: 0;
+    font-size: 35px;
+    line-height: 1;
+    color: #444;
+    font-weight: bolder;
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+.container.product-details .details h2 span {
+    font-size: 0.4em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #417dc6;
+}
+
+.container.product-details .details p {
+    color: #333333a1;
+    font-size: 17px;
+    margin-bottom: 16px;
+}
+
+.container.product-details .details h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5em;
+    color: #a2a2a2;
+    float: left;
+}
+.container.product-details .details .buttons-div{
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    button{
+    background: #198754;
+    color: #fff;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    margin-top: 5px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-radius: 40px;
+    }
+    .pre-nxt-div{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    }
+    .prev,.next{
+        text-decoration: none;
+        color: white;
+        background: rgb(0 74 119);
+        padding: 5px 10px;
+        display: flex;
+        gap: 5px;
+        height: fit-content;
+        align-items: center;
+    }
+}
+
+.product-colors span {
+    width: 26px;
+    height: 26px;
+    top: 7px;
+    margin-right: 12px;
+    left: 10px;
+    border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.black {
+    background: #000;
+}
+
+.red {
+    background: #D5212E;
+}
+
+.orange {
+    background: #F18557;
+}
+
+.product-colors .active:after{
+    content: "";
+    width: 36px;
+    height: 36px;
+    border: 2px solid #000;
+    position: absolute;
+    border-radius: 50%;
+    box-sizing: border-box;
+    left: -5px;
+    top: -5px;
+}
+}
 /* ............. product-details.html END .................. */
