--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,7 @@ header  .dropdown:hover .dropdown-menu,.dropdown-menu.show{/* hover dropdown */
           left:0;
           width:100%;
           z-index:123;
-          padding-bottom:10px;
+          padding-bottom:20px;
           transition: 0.5s;
           display: flex;
           justify-content: space-between;
@@ -511,6 +511,8 @@ header  .dropdown:hover .dropdown-menu,.dropdown-menu.show{/* hover dropdown */
   #mainNavigation.scrolled{/*...... navbar when scrolled .....*/
     background-color: white;
     box-shadow: 0px 1px 2px 2px #00000042;
+    position: fixed;
+    width: 100%;
     .navbar-toggler-icon{/*nav icon sand*/
       filter: none;
   }
@@ -757,8 +759,12 @@ p{padding:10px}
 /*................................................................ section-1 END  -................................................................*/
 
 /*....................... section-2 ...................................*/
+@media screen and (min-width:765px) {
 .section-2{
   .col-md-12{
+    padding: 0;
+  }
+  .col-md-5{
     padding: 0;
   }
   .card{
@@ -828,6 +834,84 @@ p{padding:10px}
   .card:hover{
     .product-img{
       transform: translate(20%,20%);
+    }
+  }
+}
+}
+@media screen and (max-width:765px) {
+  .section-2{
+    .col-md-12{
+      padding: 0;
+    }
+    .card{
+      width: 100%;
+      position: relative;
+      border-radius: 10px;
+      border: 0;
+      overflow: hidden;
+      color: white;
+      cursor: pointer;
+      .card-body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .card-details{
+        width: 70%;
+      }
+      .product-img{
+        position: absolute;
+        width: 50%;
+        right: 0;
+        bottom: 0;
+        transform: translate(30%,30%);
+        transition: 0.5s;
+      }
+      .highlight{
+        height: 110%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        transform: translate(30%,30%);
+      }
+      .btn{
+        background: white;
+        border: 0;
+        padding: 5px 10px;
+        color: rgb(205, 83, 83);
+        font-size: 18px;
+        font-weight: 600;
+      }
+    }
+    .card-1{
+      height: 300px;
+      background-color: rgb(205, 83, 83);
+      padding-left: 10%;
+      margin-bottom: 20px;
+      .card-title{
+        font-size: 35px;
+        font-weight: bold;
+      }
+    }
+    .card-2,.card-3{
+      height: 200px;
+      padding-left: 10%;
+      .card-title{
+        font-size: 25px;
+        font-weight: bold;
+      }
+    }
+    .card-2{
+      background-color: rgb(58, 196, 58);
+      margin-bottom: 10px;
+    }
+    .card-3{
+      background-color: rgb(212, 216, 86);
+    }
+    .card:hover{
+      .product-img{
+        transform: translate(20%,20%);
+      }
     }
   }
 }
