--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,11 +409,11 @@ header  .dropdown:hover .dropdown-menu,.dropdown-menu.show{/* hover dropdown */
          /*  text-shadow:1px 1px 2px #fff; */
         }
         .invert{/*nav logo*/
-          width: 100px;
+          width: 160px;
           transition: 0.4s;
        }
        .scrolled .invert{
-          width: 100px;
+          width: 160px;
        }
   
         .dropdown-menu {/* dropdown */
@@ -474,6 +474,7 @@ header  .dropdown:hover .dropdown-menu,.dropdown-menu.show{/* hover dropdown */
           display: flex;
           justify-content: space-between;
           padding: 0 15px;
+          height: 90px;
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
         .navbar-expand-lg{
           display: flex;
@@ -972,6 +973,122 @@ p{padding:10px}
   }
 }
 /*................................................................ section-3 END  -................................................................*/
+
+/*....................... section-4 brands ...................................*/
+.section-4{
+  .card{
+    position: relative;
+    width: 80%;
+    height: 400px;
+    background: url(../img/banner/truck.jpg);
+    background-size: cover;
+    padding: 20px;
+    display: flex;
+    border-radius: 15px;
+    margin: auto;
+    justify-content: center;
+    background-attachment: fixed;
+    overflow: hidden;
+    text-align: center;
+    .cnts{
+      width: 100%;
+      line-height: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .title{
+        font-size: 50px;
+        font-weight: bold;
+        color: white;
+      }
+      .caption{
+        color: white;
+        font-size: 25px;
+        font-weight: bold;
+        margin-bottom: 20px;
+      }
+      .btn-div button{
+        color: white;
+        border: 2px solid white;
+        background: transparent;
+        font-size: 20px;
+        transition: 0.4s;
+      }
+      .btn-div button:hover{
+        background: white;
+        color: black;
+      }
+    }
+  }
+  .card::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 0;
+    background: rgba(32, 31, 31, 0.299);
+    left: 0;
+  }
+}
+@media screen and (max-width:765px) {
+  .section-4{
+    .card{
+      position: relative;
+      width: 90%;
+      height: 250px;
+      background: url(../img/banner/truck.jpg);
+      background-size: cover;
+      padding: 0;
+      display: flex;
+      border-radius: 15px;
+      margin: auto;
+      justify-content: center;
+      background-attachment: fixed;
+      overflow: hidden;
+      text-align: center;
+      .cnts{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .title{
+          font-size: 25px;
+          font-weight: bold;
+          color: white;
+        }
+        .caption{
+          color: white;
+          font-size: 14px;
+          font-weight: bold;
+          margin-bottom: 20px;
+        }
+        .btn-div button{
+          color: white;
+          border: 2px solid white;
+          background: transparent;
+          font-size: 15px;
+          transition: 0.4s;
+        }
+        .btn-div button:hover{
+          background: white;
+          color: black;
+        }
+      }
+    }
+    .card::before{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      z-index: 0;
+      background: rgba(32, 31, 31, 0.299);
+      left: 0;
+    }
+  }
+}
+/*................................................................ section-4 brands END  -................................................................*/
 
 
 
